--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
             dist/*portable.7z
           body_path: changelog.md
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: mihomo-party-${{ matrix.arch }}
+          tag_name: Release-${{ matrix.arch }}
   
 
   linux:
