--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,8 +59,8 @@ jobs:
           body_path: changelog.md
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: Release-${{ matrix.arch }}
+          name: Release-${{ matrix.arch }}
   
-
   linux:
     strategy:
       fail-fast: false
